--- a/base/kustomization.yaml
+++ b/base/kustomization.yaml
@@ -1,1 +1,11 @@
 
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+
+resources:
+  - deployment.yaml
+  - service.yaml
+  - config-map.yaml
+  - hpa.yaml
+  - gateway.yaml
+  - virtual-service.yaml
