--- a/base/deployment.yaml
+++ b/base/deployment.yaml
@@ -1,1 +1,20 @@
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: games-api
+spec:
+  replicas: 2
+  selector:
+    matchLabels:
+      app: games-api
+  template:
+    metadata:
+      labels:
+        app: games-api
+    spec:
+      containers:
+        - name: games-api
+          image: dockerhubuser/games-api:latest
+          ports:
+            - containerPort: 8080
 
